// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен нарисовать BackOnSaleSellingInfo, если машина обслуживалась на сервисе 1`] = `
<div
  className="BackOnSaleSellingInfo"
>
  <div
    className="BackOnSaleSellingInfo__price"
  >
    10 000 ₽
  </div>
  <ul
    className="BackOnSaleSellingInfo__characters"
  >
    <li
      key="link"
    >
      Обслуживался на сервисе
    </li>
    <li
      key="fromNow"
    >
      <HoveredTooltip
        defaultPadding={true}
        directions={
          Array [
            "bottom-right",
          ]
        }
        isVisible={false}
        mainOffset={10}
        popupTheme="dark"
        secondaryOffset={-10}
        showTimeout={200}
        tooltipContent={
          <ul
            className="BackOnSaleSellingInfo__tooltip"
          >
            <li
              className="BackOnSaleSellingInfo__tooltipItem"
            >
              Последний раз обслуживался на сервисе 09.06.2020
            </li>
          </ul>
        }
      >
        <span>
          Обслуживался 2 дня назад
        </span>
      </HoveredTooltip>
    </li>
    <li
      key="sellerCount"
    />
  </ul>
</div>
`;

exports[`должен нарисовать BackOnSaleSellingInfo, если объявление оценивалось 1`] = `
<div
  className="BackOnSaleSellingInfo"
>
  <div
    className="BackOnSaleSellingInfo__price"
  >
    10 000 ₽
  </div>
  <ul
    className="BackOnSaleSellingInfo__characters"
  >
    <li
      key="link"
    >
      Оценивался
    </li>
    <li
      key="fromNow"
    >
      <HoveredTooltip
        defaultPadding={true}
        directions={
          Array [
            "bottom-right",
          ]
        }
        isVisible={false}
        mainOffset={10}
        popupTheme="dark"
        secondaryOffset={-10}
        showTimeout={200}
        tooltipContent={
          <ul
            className="BackOnSaleSellingInfo__tooltip"
          >
            <li
              className="BackOnSaleSellingInfo__tooltipItem"
            >
              Оценка стоимости была произведена 09.06.2020
            </li>
          </ul>
        }
      >
        <span>
          Оценивался 2 дня назад
        </span>
      </HoveredTooltip>
    </li>
    <li
      key="sellerCount"
    />
  </ul>
</div>
`;

exports[`должен нарисовать BackOnSaleSellingInfo, если объявление продано БУ на авто.ру 1`] = `
<div
  className="BackOnSaleSellingInfo"
>
  <div
    className="BackOnSaleSellingInfo__price"
  >
    10 000 ₽
  </div>
  <ul
    className="BackOnSaleSellingInfo__characters"
  >
    <li
      key="link"
    >
      <Link
        metrika="past_offer_click"
        target="_blank"
        url="link/card/?mark=CITROEN&model=C5&category=cars&section=used&sale_id=1094709574&sale_hash=afaab313"
      >
        Продавался с пробегом
      </Link>
    </li>
    <li
      key="fromNow"
    >
      <HoveredTooltip
        defaultPadding={true}
        directions={
          Array [
            "bottom-right",
          ]
        }
        isVisible={false}
        mainOffset={10}
        popupTheme="dark"
        secondaryOffset={-10}
        showTimeout={200}
        tooltipContent={
          <ul
            className="BackOnSaleSellingInfo__tooltip"
          >
            <li
              className="BackOnSaleSellingInfo__tooltipItem"
            >
              Снят с продажи 06.04.2020
            </li>
          </ul>
        }
      >
        <span>
          5 минут с момента продажи
        </span>
      </HoveredTooltip>
    </li>
    <li
      key="sellerCount"
    >
      <HoveredTooltip
        defaultPadding={true}
        directions={
          Array [
            "bottom-right",
          ]
        }
        isVisible={false}
        mainOffset={10}
        popupTheme="dark"
        secondaryOffset={-10}
        showTimeout={200}
        tooltipContent="Вы были предыдущим продавцом данного автомобиля"
      >
        <span>
          Вы предыдущий продавец
        </span>
      </HoveredTooltip>
    </li>
  </ul>
</div>
`;

exports[`должен нарисовать BackOnSaleSellingInfo, если объявление продано не на авто.ру 1`] = `
<div
  className="BackOnSaleSellingInfo"
>
  <div
    className="BackOnSaleSellingInfo__price"
  >
    10 000 ₽
  </div>
  <ul
    className="BackOnSaleSellingInfo__characters"
  >
    <li
      key="link"
    >
      Продавался не на Авто.ру
    </li>
    <li
      key="fromNow"
    >
      <HoveredTooltip
        defaultPadding={true}
        directions={
          Array [
            "bottom-right",
          ]
        }
        isVisible={false}
        mainOffset={10}
        popupTheme="dark"
        secondaryOffset={-10}
        showTimeout={200}
        tooltipContent={
          <ul
            className="BackOnSaleSellingInfo__tooltip"
          >
            <li
              className="BackOnSaleSellingInfo__tooltipItem"
            >
              Снят с продажи 02.04.2020
            </li>
          </ul>
        }
      >
        <span>
          5 минут с момента продажи
        </span>
      </HoveredTooltip>
    </li>
    <li
      key="sellerCount"
    >
      <HoveredTooltip
        defaultPadding={true}
        directions={
          Array [
            "bottom-right",
          ]
        }
        isVisible={false}
        mainOffset={10}
        popupTheme="dark"
        secondaryOffset={-10}
        showTimeout={200}
        tooltipContent="Вы были предыдущим продавцом данного автомобиля"
      >
        <span>
          Вы предыдущий продавец
        </span>
      </HoveredTooltip>
    </li>
  </ul>
</div>
`;

exports[`должен нарисовать BackOnSaleSellingInfo, если объявление продано новым на авто.ру 1`] = `
<div
  className="BackOnSaleSellingInfo"
>
  <div
    className="BackOnSaleSellingInfo__price"
  >
    10 000 ₽
  </div>
  <ul
    className="BackOnSaleSellingInfo__characters"
  >
    <li
      key="link"
    >
      <Link
        metrika="past_offer_click"
        target="_blank"
        url="link/card/?mark=CITROEN&model=C5&category=cars&section=new&sale_id=1094709574&sale_hash=afaab313"
      >
        Продавался новый
      </Link>
    </li>
    <li
      key="fromNow"
    >
      <HoveredTooltip
        defaultPadding={true}
        directions={
          Array [
            "bottom-right",
          ]
        }
        isVisible={false}
        mainOffset={10}
        popupTheme="dark"
        secondaryOffset={-10}
        showTimeout={200}
        tooltipContent={
          <ul
            className="BackOnSaleSellingInfo__tooltip"
          >
            <li
              className="BackOnSaleSellingInfo__tooltipItem"
            >
              Снят с продажи 06.04.2020
            </li>
          </ul>
        }
      >
        <span>
          5 минут с момента продажи
        </span>
      </HoveredTooltip>
    </li>
    <li
      key="sellerCount"
    >
      <HoveredTooltip
        defaultPadding={true}
        directions={
          Array [
            "bottom-right",
          ]
        }
        isVisible={false}
        mainOffset={10}
        popupTheme="dark"
        secondaryOffset={-10}
        showTimeout={200}
        tooltipContent="После вас                              данный автомобиль продавался на авто.ру 2 раза"
      >
        <span>
          2 продавца после вас
        </span>
      </HoveredTooltip>
    </li>
  </ul>
</div>
`;
